<!--
  Copyright 2014 Google, Inc
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
    <string name="app_name">AFJ Tracking</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Start Service</string>
    <string name="remove_location_updates">Stop Service</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">Tracking/Inspection Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_data_found">No Record Found</string>
    <string name="menu_tracking">Track Location</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_fuel_fill">Fuel Filling Form</string>
    <string name="menu_report_fill">Form</string>
    <string name="menu_attendance">QR Scan</string>
    <string name="menu_device_info">Device Info</string>
    <string name="menu_shift_form">My Shift</string>
    <string name="menu_weekly_inspection">Inspections</string>
    <string name="menu_weekly_inspection_form">Inspection</string>
    <string name="menu_map">Map</string>
    <string name="title_daily_inspection_check">Daily Inspection</string>
    <string name="email_not_empty">Enter an E-Mail Address</string>
    <string name="email_not_valid">Enter a Valid E-mail Address</string>
    <string name="password_not_empty">Enter a Password</string>
    <string name="enter_valid_password">Enter at least 6 Digit password</string>
    <string name="ui_type_text">TEXT</string>
    <string name="ui_type_file">FILE</string>
    <string name="ui_type_image">IMAGE</string>
    <string name="unauthenticated">unauthenticated</string>
    <string name="choose_sign_title">Choose an Account</string>
    <string name="choose_sign_sub_msg">to continue to AFJ sign in</string>
    <string name="navigation">Map Navigation</string>
    <string name="search">Search</string>


 <!--   <string name="map_key">AIzaSyDs-G6o1BgGQezIWkWHMjlQvniZLBsn6dw</string>-->
    <string name="map_key">AIzaSyCMKV0Yz1tY-tliMVuyd-rstHlvjt6WkGA</string>
    <string name="request_msg">Your %s request has been submitted successfully</string>
    <string name="request_submited">Request Completed</string>
    <string name="request_inspection_completed">Inspection Completed</string>

    <string name="odo_meter_error">Cannot less than previous reading %1$d</string>
    <string name="networ_error_text">Your are offline now</string>
    <string name="initiated">initiated</string>


    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="reject">Reject</string>
    <string name="answer_call">Answer</string>


    <string name="text_accept">Accept</string>
    <string name="text_decline">Decline</string>
    <string name="text_missed_call">Missed call</string>
    <string name="text_call_back">Call back</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>
